<resources>
    <string name="app_name">GroupUp!</string>
    <string name="not_possible">Missing information.</string>
    <string name="too_young">We are sorry :( You are too young.</string>
    <string name="register_succes">Registration completed.</string>
    <string name="cannot_sign_in">Cannot sign in!</string>
    <string name="favourite_hangouts">Favourite Hangouts</string>
    <string name="sport_kinds">Sports</string>
    <string name="music">Music</string>
    <string name="languages">Languages</string>
    <string name="about_me">About me</string>
    <string name="group_description_headline">Description</string>
    <string name="write_some_words_group">Write some words about your group:</string>
    <string name="discard_continue">Discard and continue</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="change_name">Change Name</string>
    <string name="leisure">Leisure</string>
    <string name="business">Business</string>
    <string name="nightlife">Nightlife</string>
    <string name="note">Note</string>
    <string name="yes_continue">Yes, Continue</string>
    <string name="members">Members</string>
    <string name="back_homescreen">Continue exploring</string>
    <string name="accept_friend">Accept as Friend</string>
    <string name="cancel_friend_request">Cancel Friend Request</string>
    <string name="unfriend">Unfriend</string>
    <string name="no_friends_anymore">No Friends anymore.</string>
    <string name="you_are_now_friends">You are now Friends!</string>
    <string name="sent_successfully">Sent Successfully!</string>
    <string name="add_friend">Add as Friend</string>
    <string name="failed_sending_request">Failed sending Request.</string>
    <string name="end_friendship">Do you really wanna end your Friendship?</string>
    <string name="friend_request_canceled">Canceled Friend Request.</string>
    <string name="friends_label">Friends</string>
    <string name="no_friends">Here are no friends yet.</string>
    <string name="accept">Accept</string>
    <string name="new_group_title">Ok, something new.  How about one of these suggestions?</string>
    <string name="choose_a_place">Do you wanna choose a place?</string>
    <string name="yes">Yes</string>
    <string name="no">No.</string>
    <string name="who_can_see_group">Who is allowed to join your group?</string>
    <string name="my_friends">My Friends</string>
    <string name="everybody">Everybody</string>
    <string name="what_you_do_group">What do you want to do with your group?</string>
    <string name="which_group">Which group do you want to create?</string>
    <string name="new_group">Something new for today.</string>
    <string name="same_group">Same as last time.</string>
    <string name="what_are_friends_doing">What are my friends doing?</string>
    <string name="running">Running</string>
    <string name="gym">Gym</string>
    <string name="basketball">Basketball</string>
    <string name="football">Soccer</string>
    <string name="sport">Sport</string>
    <string name="jogging">Jogging</string>
    <string name="dance">Dancing</string>
    <string name="biken">Biking</string>
    <string name="skateboarden">Skateboarden</string>
    <string name="swimming">Swimming</string>
    <string name="ice_skating">Ice Skating</string>
    <string name="fishing">Fishing</string>
    <string name="volleyball">Volleyball</string>
    <string name="chess">Chess</string>
    <string name="climbing">Climbing</string>
    <string name="ice_hockey">Ice Hockey</string>
    <string name="baseball">Baseball</string>
    <string name="martial_arts">Martial Arts</string>
    <string name="tennis">Tennis</string>
    <string name="table_tennis">Table Tennis</string>
    <string name="mountainbiken">Mountain Biking</string>
    <string name="my_account">My Account</string>
    <string name="premium_coins_headline">Premium and GroupCoins</string>
    <string name="get_premium_now">- Get Premium now</string>
    <string name="business_kit">- Business Kit</string>
    <string name="app_settings">App Settings</string>
    <string name="visibility_for_other">- Visibility for others</string>
    <string name="support">Support</string>
    <string name="support_requests">- Support Requests</string>
    <string name="imprint">- Imprint</string>
    <string name="licenses">- Licenses</string>
    <string name="group_filter_settings">- Group Filter</string>
    <string name="my_account_settings">- My Account</string>
    <string name="name">"Name:"</string>
    <string name="birthday">Birthday:</string>
    <string name="years">Years</string>
    <string name="age">Age: </string>
    <string name="note_change_birthday">You can only change your date of birth once. Do you really want to change it?</string>
    <string name="nav_home">Home</string>
    <string name="nav_notification">Notification</string>
    <string name="nav_search">Search</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_settings">Settings</string>
    <string name="my_group">My Group</string>
    <string name="whats_your_name">Whats your name?</string>
    <string name="age_city_registration">Your Age and City</string>
    <string name="choose_username_wisely">Choose your username wisely. It can be seen by everybody, so dont use vulgar words.</string>
    <string name="choose_age_city">Its important for us to connect you with the right people, events and groups close to you. Thats why we need that information.</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="username">Username</string>
    <string name="welcome_to">Welcome to</string>
    <string name="information_missing">We need this information. Any questions? Ask our support :)</string>
    <string name="your_age">Your Age</string>
    <string name="your_city">Your City</string>
    <string name="your_image">Your Image</string>
    <string name="choose_image">With a photo, people can roughly judge who you are. That\'s important because you want to get to know the right people. You can also upload a photo later.</string>
    <string name="suggested">Suggested</string>
    <string name="search_headline">You can search someone by his username or his first and surname.</string>
    <string name="no_new_friend_requests">You dont have any new friend requests.</string>
    <string name="no_new_group_invites">You dont have any new group invites.</string>
    <string name="invited_friends">Invited Friends</string>
    <string name="your_friends">Your Friends</string>
    <string name="no_chats_yet">No Chats here yet.</string>
    <string name="no_group_chats">No Group Chats here yet.</string>
    <string name="select_language">Sprache auswählen</string>
    <string name="write_message">Write message</string>
    <string name="just_now">Just now</string>
    <string name="yesterday">Yesterday</string>
    <string name="a_minute_ago">A minute ago</string>
    <string name="minutes_ago">" minutes ago"</string>
    <string name="an_hour_ago">An hour ago</string>
    <string name="hours_ago">" hours ago"</string>
    <string name="days_ago">" days ago"</string>
    <string name="properties">Properties</string>
    <string name="location">Location</string>
    <string name="add_your_friends">Add your Friends</string>
    <string name="visibility">Visibility</string>
    <string name="group_description">Group Description</string>
    <string name="set_tag_headline_text">These Tags will describe your Group. You can also use Emoticons.</string>
    <string name="night_club">Nightclub</string>
    <string name="bar_pub">Bar / Pub</string>
    <string name="houseparty">Houseparty</string>
    <string name="event">Event</string>
    <string name="seminar">Seminar</string>
    <string name="motivation">Motivation</string>
    <string name="connection_group">Connection Group</string>
    <string name="creator">"Creator: "</string>
    <string name="group_is_here">The Group is here.</string>
    <string name="your_chats">Your Chats</string>
    <string name="choose_contact">Choose Contact</string>
    <string name="write_a_message">Write a message</string>
    <string name="create_group">Create Group</string>
    <string name="group_chat">Group Chat</string>
    <string name="delete_group">Delete Group</string>
    <string name="with_requests">With Requests</string>
    <string name="status">Status</string>
    <string name="open">Open</string>
    <string name="join_group">Join Group</string>
    <string name="invite_your_friends">Invite your Friends</string>
    <string name="leave_group">Leave Group</string>
    <string name="send_request">Send Request</string>
    <string name="business_kit_headline">The GroupUp! Business Kit is a new authentic way to represent a brand, product or event and reach your target audience.</string>
    <string name="make_admin">Make Group Admin</string>
    <string name="remove_user">Remove user</string>
    <string name="group_request">Group Request</string>
    <string name="accept_request">Accept Request</string>
    <string name="decline_request">Decline Request</string>
    <string name="show_user">Show User</string>
    <string name="which_languages">Which languages do you speak?</string>
    <string name="german">German</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="croatian">Croatian</string>
    <string name="portuguese">Portuguese</string>
    <string name="finnish">Finnsih</string>
    <string name="french">French</string>
    <string name="greek">Greek</string>
    <string name="hungarian">Hungarian</string>
    <string name="serbian">Serbian</string>
    <string name="swedish">Swedish</string>
    <string name="turkish">Turkish</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="russian">Russian</string>
    <string name="romanian">Romanian</string>
    <string name="polish">Polish</string>
    <string name="korean">Korean</string>
    <string name="japanese">Japanese</string>
    <string name="arabic">Arabic</string>
    <string name="dutch">Dutch</string>
    <string name="slovak">Slovak</string>
    <string name="spanish">Spanish</string>
    <string name="italian">Italian</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="earlier">Earlier</string>
    <string name="you_have_send">"You have send "</string>
    <string name="a_friend_request">" a friend request."</string>
    <string name="all_activities">all activities</string>
    <string-array name="group_types">
        <item>all group types</item>
        <item>sport groups</item>
        <item>leisure groups</item>
        <item>nightlife groups</item>
        <item>business groups</item>
    </string-array>
    <string-array name="group_activities_nightlife">
        <item>@string/all_activities</item>
        <item>@string/hookah_bar</item>
        <item>@string/night_club</item>
        <item>@string/bar_pub</item>
        <item>@string/houseparty</item>
    </string-array>
    <string-array name="group_activities_business">
        <item>@string/all_activities</item>
        <item>@string/motivation</item>
        <item>@string/connection_group</item>
        <item>@string/seminar</item>
        <item>@string/event</item>
    </string-array>
    <string name="hookah_bar">Hookah Bar</string>
    <string name="vip_headline">The GroupUp! VIP Experience makes you a person of influence!</string>
    <string name="vip_headline_2">Get special advantages which boost your profile into the top charts.</string>
    <string name="vip_features_include">Features include:</string>
    <string name="vip_ranking_booster" translatable="false">Ranking Booster</string>
</resources>